# Apidylib

./: .gitignore  pnpm-lock.yaml  replit.md
artifacts/api-server/src/middlewares/: auth.ts
artifacts/api-server/src/routes/: auth.ts  index.ts  keys.ts
artifacts/web/: index.html
artifacts/web/.replit-artifact/: artifact.toml
artifacts/web/src/: App.tsx  index.css
artifacts/web/src/components/: layout.tsx
artifacts/web/src/pages/: dashboard.tsx  docs.tsx  login.tsx
dll/: CMakeLists.txt  README.md  test_main.cpp  xit1299.cpp  xit1299.h
dylib/: Makefile.mac  Makefile.theos  README.md  com.xit1299.keygate_1.0.0_iphoneos-arm.deb  test_main.m  xit1299.deb  xit1299.h  xit1299.m
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts  license-keys.ts
